--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.4",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.534.0",
     "next": "15.4.4",
     "pg": "^8.16.3",
