--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "drizzle-orm": "^0.44.4",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.534.0",
+    "motion": "^12.23.12",
     "next": "15.4.4",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
