--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@clerk/nextjs": "^6.28.0",
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-separator": "^1.1.7",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
